@@ -29,10 +29,10 @@ public class PostQueryServiceImpl implements PostQueryService {
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new PostHandler(ErrorStatus._POST_NOT_FOUND));
 
-        // 게시글이 신고되었는지 확인
-        if (isPostReported(post)) {
-            throw new PostHandler(ErrorStatus._POST_REPORTED);
-        }
+        // 게시글이 신고되었는지 확인 - 수정 예정
+//        if (isPostReported(post)) {
+//            throw new PostHandler(ErrorStatus._POST_REPORTED);
+//        }
 
         // 조회된 게시글을 PostSingleResponse로 변환하여 반환
         return PostSingleResponse.toDTO(post);
@@ -47,14 +47,15 @@ public class PostQueryServiceImpl implements PostQueryService {
             throw new PostHandler(ErrorStatus._INVALID_BOARD_TYPE);
         }
 
-        // 신고되지 않은 게시글만 조회
+        // 신고되지 않은 게시글만 조회 -수정 예정
         Page<Post> postPage = postRepository.findByBoardAndPostReportListIsEmpty(boardType, pageable);
 
         return PostPagingResponse.builder()
                 .postType(type)
                 .postResponses(postPage.getContent().stream()
                         .map(PostPagingDetailResponse::toDTO)
-                        .collect(Collectors.toList()))
+                        .toList()
+                )
                 .totalPage(postPage.getTotalPages())
                 .totalElements(postPage.getTotalElements())
                 .isFirst(postPage.isFirst())
@@ -63,7 +64,7 @@ public class PostQueryServiceImpl implements PostQueryService {
     }
 
     // 게시글이 신고되었는지 확인하는 메서드
-    private static boolean isPostReported(Post post) {
+    private boolean isPostReported(Post post) {
         return !post.getPostReportList().isEmpty();
     }
 }
